<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post Author\'s avatar</string>
    <string name="description_post_menu">Post Menu</string>
    <string name="description_likes_button">Likes Button</string>
    <string name="description_share_button">Share Button</string>
    <string name="description_viewing_button">Viewing Count</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="description_save_button">Save button</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit">Edit</string>
    <string name="icon_edite">Icon edite</string>
    <string name="cancel_button">Undo edit button</string>
    <string name="empty_text_error">Text must not be blank</string>
    <string name="description_add_post_button">Button for adding a post</string>
    <string name="description_save_new_post_button">Save New Post</string>
    <string name="title_edit_a_post">Edit a post</string>
    <string name="description_video_preview">Video preview</string>
    <string name="edit_message">Edit message</string>
    <string name="description_play_button">Play button</string>
    <string name="cancel_editing">Cancel editing</string>
    <string name="cancel_editing_text">Do you really want to undo the changes?</string>
    <string name="cancel_post_creation_text">Do you really want to cancel the creation of the post?</string>
    <string name="cancel_post_creation">Cancel the creation post</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_post_hint">Here will be your post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_posted">User %1$s published a new post</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="no_posts_yet">No posts yet</string>
    <string name="attachment_for_the_post">Attachment for the post</string>
    <string name="retry_loading">Retry loading</string>
    <string name="the_sign_of_sending_a_post_to_the_server">The sign of sending a post to the server</string>
    <string name="the_button_for_showing_new_posts">The button for showing new posts</string>
    <string name="new_entries">New entries</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="preview_of_photo">Preview of photo</string>
    <string name="make_the_photo">Make the photo</string>
    <string name="choose_the_photo">Choose the photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="make_the_comment">Make the comment</string>
    <string name="full_screen_photo">Full-screen photo</string>
    <string name="description_the_back_button">The back button</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in_to_nmedia">Sign in to NMedia</string>
    <string name="invalid_login">Invalid login</string>
    <string name="invalid_password">Invalid password</string>
    <string name="sign_up_to_nmedia">Sign up to NMedia</string>
    <string name="name">Name</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="to_interact_with_posts_you_need_to_log_in">To interact with posts, you need to log in</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="if_you_exit_now_progress_will_be_lost">If you exit now, progress will be lost</string>
    <string name="get_out_anyway">Get out anyway</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="preview_of_the_advertisement">Preview of the advertisement</string>
</resources>