<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_spacing"
    tools:context=".activity.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_spacing"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_up_to_nmedia"
            android:textColor="@color/design_default_color_primary"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:contentDescription="@string/description_post_author_avatar"
            android:maxWidth="64dp"

            android:maxHeight="64dp"
            android:src="@drawable/account_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addAvatarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_the_photo"
            android:textColor="?attr/colorOnBackground"
            app:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="yes"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addAvatarButton"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="yes"
            android:hint="@string/login"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/login"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/passwordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password_confirmation"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/password"
            tools:ignore="VisualLintTextFieldSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/passwordConfirmation"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/noAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/noAccount"
            tools:ignore="VisualLintButtonSize"
            android:backgroundTint="@android:color/transparent"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>